--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -17,7 +17,8 @@
 
   <header>
     <nav class="navbar is-dark">
-      <a href="/"><img src="../public/images/logo.png" width="200px" style="background-color:rgb(244, 244, 231, 0.742)"></a>
+      <a href="/"><img src="https://res.cloudinary.com/davd4ynha/image/upload/v1540419329/chamba.png" width="200px"
+          style="background-color:rgb(244, 244, 231, 0.742)"></a>
       {{#if user}}
       <a href="/chambitas" class="">ver las chambitas</a>
       <a href="/map" class="">el mapa</a>
